# forex

./: README.md
forex/: .gitignore  Makefile.am  configure.ac  forex.cpp
forex/fxcm/: CSV.h  Client.cpp  Client.h  DataSnapshot.h  DateTime.cpp  DateTime.h  HistoryBuilder.h  Response.cpp  Response.h  Session.cpp  Session.h
forex/fxcm/test/: CSVTest.cpp  ClientTest.cpp  DataSnapshotTest.cpp  DateTimeTest.cpp  MockIO2GResponse.h  MockIO2GResponseReaderFactory.h  MockIO2GSession.h  ResponseTest.cpp  TickFixture.h
forex/m4/: ax_boost_base.m4  ax_boost_date_time.m4  ax_boost_system.m4  ax_boost_test_exec_monitor.m4  ax_boost_thread.m4
